# SmartPark-Pro

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml
Backend/: .env.example  alembic.ini  check_users.py  pyproject.toml  requirements.txt  set_admin_password.py  test_connection.py
Backend/alembic/: env.py  script.py.mako
Backend/app/: main.py
Backend/app/core/: config.py  database.py
Backend/app/models/: __init__.py  caja_transaccion.py  cliente.py  enums.py  factura.py  ingreso.py  membresia.py  pago.py  plan.py  salida.py  tarifa.py  tipo_vehiculo.py  turno_caja.py  usuario.py  vehiculo.py
Backend/app/routers/: auth.py  ingreso.py  vehiculo.py
Backend/app/schemas/: auth.py  ingreso.py  vehiculo.py
Backend/app/services/: auth.py  ingreso.py  vehiculo.py
Frontend/: Dockerfile  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.electron.json  tsconfig.json  vite.config.ts
Frontend/electron/: main.ts  preload.cts
Frontend/src/: main.tsx  vite-env.d.ts
Frontend/src/layout/: AppLayout.tsx  DateTimeBar.tsx  Header.tsx
Frontend/src/modules/caja/: caja.types.ts  index.ts
Frontend/src/modules/configuracion/: configuracion.types.ts  index.ts
Frontend/src/modules/turnos/: index.ts  (+1 more)
Frontend/src/pages/: DashboardPage.tsx  RegistroPage.tsx  ReportesPage.tsx
Frontend/src/router/: index.tsx
Frontend/src/stores/: authStore.ts  turnoStore.ts  uiStore.ts
Frontend/src/styles/: globals.css
docs/: api.md  arquitectura.md  base-datos.md  contribucion.md  instalacion.md
(+41 files in other folders)
