[project]
name = "smartpark-pro-backend"
version = "0.1.0"
description = "Backend API for SmartPark Pro"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.124.2",
  "uvicorn[standard]==0.38.0",
  "SQLAlchemy[asyncio]==2.0.45",
  "alembic==1.17.2",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "asyncpg==0.31.0",
  "python-jose[cryptography]==3.5.0",
  "passlib[bcrypt]==1.7.4",
  "python-dotenv==1.2.1"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["app"]
